# datachat

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED.md  README.md  TESTING.md  docker-compose.yml  playbook.md  pyproject.toml  smoke_testing.md
.github/workflows/: python-app.yml
backend/: Dockerfile  cli.py  config.py  settings_store.py
config/: phase1_kpi.json  tools.yaml
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_DYNAMIC_DATA_AGENT.md  CLAUDE.md  CLI_QUICKSTART.md  CREDENTIALS_ONLY_MODE.md  DATAPOINT_CONTRACTS.md  DATAPOINT_EXAMPLES_TESTING.md  DATAPOINT_GROCERY_TESTING.md  DATAPOINT_SCHEMA.md  DEMO_PLAYBOOK.md  DOMAIN_QUESTION_BANK.md  FINANCE_END_USER_QUICKSTART.md  FINANCE_WORKFLOW_V1_MANUAL_TEST.md  FRONTEND_PRD.md  GTM_90_DAY_PLAN.md  INTENT_GATHERING_PLAN.md  LEVELS.md  MANUAL_TESTING_PR001_PR002.md  METADATAOPS_FOUNDATION.md  MULTI_DATABASE.md  PHASE14_SIMPLE_ENTRY_LAYER.md  PHASE1_KPI_GATES.md  PLAYBOOK.md  PRD.md  PROMPTS.md  QUERY_COMPILER_RUNTIME.md  RAG_EVAL.md  README.md  ROADMAP.md  ROUTING_POLICY.md  SESSION_MEMORY.md  SQL_ROUTING_DECISION_TREE.md  UI_HOWTO.md  UNIFIED_ROUTING_ARCHITECTURE.md  V2_SPEC.md
eval/: intent_credentials.json  qa.json  retrieval.json  routes_credentials.json
frontend/: Dockerfile  package-lock.json  package.json
prompts/: README.md
reports/: latency_progressive_20260212T120351Z.json  latency_progressive_20260212T120351Z.md
scripts/: README.md  benchmark_latency_progressive.py  eval_runner.py  fintech_seed.sql  grocery_seed.sql  phase1_kpi_gate.py
tests/: conftest.py
workspace_demo/: README.md
(+198 files in other folders)
